# cloudflare-dns-operator

./: .envrc  .gitignore  Cargo.toml  README.md  crds.yaml  flake.nix  justfile
examples/: cloudflare.rs  deployment.yaml  external-ip.rs
nix/: default.nix  image.nix  package.nix
src/: conditions.rs  context.rs  dns_check.rs  lib.rs  main.rs  reconcile.rs  resources.rs  services.rs  state.rs
src/dns/: cloudflare.rs  lookup.rs  mod.rs  util.rs
