[package]
name = "cloudflare-dns-operator"
version = "0.1.4"
edition = "2021"

authors = ["Robert Krahn <robert@shuttle.video>"]
license = "MPL-2.0"
description = "Kubernetes operator to manage Cloudflare DNS records"
repository = "https://github.com/hypervideo/cloudflare-dns-operator"
homepage = "https://github.com/hypervideo/cloudflare-dns-operator"
keywords = ["cloudflare", "dns", "kubernetes", "kube-rs", "cloud-native"]
categories = ["network-programming", "virtualization"]
readme = "README.md"

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
humantime = "2.1.0"
k8s-openapi = { version = "0.23.0", features = ["schemars"] }
kube = { version = "0.95.0", features = ["runtime", "derive", "unstable-runtime"] }
random-string = "1.1.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
rsdns = { version = "0.19.0", features = ["net-tokio"] }
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
thiserror = "1.0.64"
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["latest"]
latest = ["k8s-openapi/latest"]
v1_26 = ["k8s-openapi/v1_26"]
v1_27 = ["k8s-openapi/v1_27"]
v1_28 = ["k8s-openapi/v1_28"]
v1_29 = ["k8s-openapi/v1_29"]
v1_30 = ["k8s-openapi/v1_30"]
v1_31 = ["k8s-openapi/v1_31"]
